test_suite5/ALAN/test_suite/alan-2022-examples/failing/002420_mutation.alan
source r begin get while w1RM end
